2009-02-26  Johannes Schmid  <jhs@gnome.org>

	* gdl/gdl-dock.c (gdl_dock_select_larger_item):
	Remove a stupid warning for a forgotten placement case.

2008-02-22  Sébastien Granjoux  <seb.sfo@free.fr>

	* gdl/gdl-dock-item.c:
	Fix #566801 – Docking+undocking all makes the buttons disappear and
	crashes if you use "Reset dock layout"

=== gdl 2.25.91 ===

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* NEWS:
	* configure.in:
	Updated for release

2009-02-08  Johannes Schmid  <jhs@gnome.org>

	* docs/reference/gdl-docs.sgml:
	* docs/reference/gdl-sections.txt:
	Fixed some documentation issues.

	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_instance_init):
	* gdl/gdl-dock-item.c (gdl_dock_item_class_init):
	Patch from Joel Holdsworth <joel@airwebreathe.org.uk>:
	- Add documentation comments

2008-12-09  Pedro Fragoso  <ember@ubuntu.com>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* gdl/gdl-combo-button.h:
	* gdl/gdl-dock-bar.h:
	* gdl/gdl-dock-item-grip.c:
	* gdl/gdl-dock-item-grip.h:
	* gdl/gdl-dock-master.h:
	* gdl/gdl-dock-object.h:
	* gdl/gdl-dock-paned.c:
	* gdl/gdl-stock.c:
	* gdl/gdl-switcher.c:
	* gdl/gdl-switcher.h:
	* gdl/gdl-tools.h:
	GNOME Goal: Clean up GLib and GTK+ includes (Closes: #563902)

=== gdl 2.24.0 ===

2008-09-22  Johannes Schmid  <jhs@gnome.org>

	* configure.in Bumped version
	* NEWS: updated

2008-09-02  Christian Persch <chpe@gnome.org>

	* gdl-1.0.pc.in:
	#546938 – datarootdir problem

2008-09-02  Johannes Schmid  <jhs@gnome.org>

	* Makefile.am:
	* configure.in:
	* docs/reference/gdl-sections.txt:
	* docs/reference/gdl.types:
	* gdl-gnome-1.0.pc.in:
	* gdl/Makefile.am:
	* gdl/gdl-data-frame.c:
	* gdl/gdl-data-frame.h:
	* gdl/gdl-data-model-test.c:
	* gdl/gdl-data-model-test.h:
	* gdl/gdl-data-model.c:
	* gdl/gdl-data-model.h:
	* gdl/gdl-data-row.c:
	* gdl/gdl-data-row.h:
	* gdl/gdl-data-view.c:
	* gdl/gdl-data-view.h:
	* gdl/test-dataview.c:
	Removed old and unused API and thus fixed
	#513845 – Port gdl to gio
